--- a/hello_world_application/CMakelists.txt
+++ b/hello_world_application/CMakelists.txt
@@ -1,12 +1,10 @@
-
- cmake_minimum_required (VERSION 3.4)
+cmake_minimum_required (VERSION 3.4)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(heloy_wld)
-file (GLOB
- CPPs "*.cpp")
-add_executable(${PROJECT_NAME} ${CPPs})
+add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/hello_world.cpp)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib formatter_ex)
-target_link_libraries(${PROJECT_NAME} formatter_ex)
+target_link_libraries(heloy_wld formatter_ex)
+ 
  
