--- a/solver_lib/CMakeLists.txt
+++ b/solver_lib/CMakeLists.txt
@@ -2,4 +2,4 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(solver_lib)
-add_library(solver_lib STATIC ${CMAKE_CURRENT_SOURCE_DIR}/solver.cpp
+add_library(solver_lib STATIC ${CMAKE_CURRENT_SOURCE_DIR}/solver.cpp)
